fix archive layout bugs, add Share Button

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -32,9 +32,6 @@ body {
   overflow-x: hidden;
 }
 
-h1 {
-  margin-top: 10px;
-}
 
 a {
   text-decoration: none;
